# radsuite

./: .env.example  .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/desktop-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop-ui/scripts/: verify-style-contract.mjs
apps/desktop-ui/src/: App.svelte  App.tsx  main.ts  styles.css  types.ts
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/capabilities/: default.json
apps/desktop-ui/src-tauri/src/: main.rs
apps/desktop-ui/src/components/: CitationActionsPanel.svelte  ProjectSidebar.svelte  RadciteDocumentsWorkspace.svelte  RadciteExportsWorkspace.svelte  RadciteReadingsWorkspace.svelte  RadciteReferencesWorkspace.svelte
apps/desktop-ui/src/lib/: exportCommands.test.ts  exportCommands.ts  paragraphFilters.test.ts  paragraphFilters.ts  projectCommands.test.ts  projectCommands.ts  readingCommands.test.ts  readingCommands.ts  referenceCommands.test.ts  referenceCommands.ts  reviewActionCommands.test.ts  reviewActionCommands.ts  reviewActions.test.ts  reviewActions.ts  savedReviewCommands.test.ts  savedReviewCommands.ts
crates/radsuite-cite/: Cargo.toml
crates/radsuite-cite/src/: analysis.rs  docx.rs  lib.rs  readings_csv.rs
crates/radsuite-cite/tests/: analysis_contracts.rs  docx_ingestion.rs  readings_csv_import.rs
crates/radsuite-core/: Cargo.toml
crates/radsuite-core/src/: api.rs  domain.rs  ids.rs  lib.rs  roles.rs
crates/radsuite-core/tests/: domain_contracts.rs
crates/radsuite-db/: Cargo.toml
crates/radsuite-db/migrations/: 0001_foundation.sql  0002_course_modules_readings.sql
crates/radsuite-db/src/: error.rs  lib.rs  migrate.rs  repositories.rs
crates/radsuite-db/tests/: repository_roundtrip.rs
crates/radsuite-desktop/: Cargo.toml
crates/radsuite-desktop/src/: app_paths.rs  commands.rs  lib.rs  state.rs
crates/radsuite-desktop/tests/: desktop_contracts.rs  real_course_smoke.rs
crates/radsuite-engines/: Cargo.toml
crates/radsuite-engines/src/: capabilities.rs  lib.rs  registry.rs
crates/radsuite-engines/tests/: registry.rs
crates/radsuite-server/: Cargo.toml
crates/radsuite-server/src/: config.rs  lib.rs  main.rs  state.rs
crates/radsuite-server/src/routes/: assets.rs  auth.rs  health.rs  mod.rs  projects.rs  sync.rs
crates/radsuite-server/tests/: server_contracts.rs
crates/radsuite-sync/: Cargo.toml
crates/radsuite-sync/src/: asset_manifest.rs  change.rs  conflict.rs  lib.rs
crates/radsuite-sync/tests/: sync_contracts.rs
docs/: development.md  server-alpha-ops.md
docs/superpowers/plans/: 2026-04-26-radsuite-phase-1-foundation.md  2026-04-26-radsuite-phase-2-radcite-first-slice.md  2026-04-27-radcite-docx-ingestion.md  2026-04-28-radcite-functional-docx.md  2026-04-28-svelte-ui-shell.md  2026-04-30-project-first-radcite-shell.md  2026-05-01-radcite-visual-identity-pass.md  2026-05-04-radcite-shell-polish.md  2026-05-14-radcite-module-readings-export.md  2026-05-14-radcite-readings-edit-actions.md  2026-05-14-radcite-readings-foundation.md  2026-05-14-radcite-reference-export.md  2026-05-14-radcite-reference-suggestions.md  2026-05-14-radcite-review-queue.md  2026-05-14-radcite-usability-actions.md  2026-05-16-radcite-readings-import-preview.md  2026-05-29-radcite-project-csv-readings.md
docs/superpowers/specs/: 2026-04-25-radsuite-rust-consolidation-design.md  2026-04-27-radcite-docx-ingestion-design.md  2026-04-28-radcite-functional-docx-design.md  2026-04-28-svelte-ui-shell-design.md  2026-04-30-project-first-radcite-shell-design.md  2026-05-01-radcite-visual-identity-pass-design.md  2026-05-04-radcite-shell-polish-design.md  2026-05-14-radcite-module-readings-export-design.md  2026-05-14-radcite-readings-edit-actions-design.md  2026-05-14-radcite-readings-foundation-design.md  2026-05-14-radcite-reference-export-design.md  2026-05-14-radcite-reference-suggestions-design.md  2026-05-14-radcite-review-queue-design.md  2026-05-14-radcite-usability-actions-design.md  2026-05-16-radcite-readings-import-preview-design.md  2026-05-29-radcite-project-csv-readings-design.md
packaging/macos/: README.md
packaging/windows/: README.md
