[package]
name = "radsuite-cite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
radsuite-core = { path = "../radsuite-core" }
quick-xml.workspace = true
regex.workspace = true
thiserror.workspace = true
zip.workspace = true
