[package]
name = "radsuite-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
radsuite-core = { path = "../radsuite-core" }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
radsuite-cite = { path = "../radsuite-cite" }
tokio.workspace = true
zip.workspace = true
