[package]
name = "radsuite-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
directories.workspace = true
radsuite-cite = { path = "../radsuite-cite" }
radsuite-core = { path = "../radsuite-core" }
radsuite-db = { path = "../radsuite-db" }
radsuite-engines = { path = "../radsuite-engines" }
regex.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
zip.workspace = true
