[package]
name = "radsuite-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
radsuite-desktop = { path = "../../../crates/radsuite-desktop" }
tauri.workspace = true
tauri-plugin-dialog.workspace = true
